Fixed lots of contrast bugs
- Footers and line breaks now work

- Added high contrast nav and scroll buttons

- Text boxes now have high contrast versions

- Removed all references to line-break-dark

--- a/style/base-style.css
+++ b/style/base-style.css
@@ -393,11 +393,6 @@ a
 	border-color: rgb(127, 127, 127);
 }
 
-.text-box-dark
-{
-	border-bottom: 2px solid rgb(64, 64, 64);
-}
-
 
 
 .row:after
